// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a set of instructions that describe a rectangle path that is drawn and that then changes state should have recorded everything in the right order 1`] = `
Array [
  "context.beginPath()",
  "context.moveTo(0,0)",
  "context.lineTo(1,0)",
  "context.lineTo(1,1)",
  "context.lineTo(0,1)",
  "context.lineTo(0,0)",
  "context.fill()",
  "context.fillStyle = \\"#f00\\"",
]
`;

exports[`a set of instructions that is also about a path that receives a change of state and then receives a change of state on the same property should still contain only two instructions 1`] = `
Array [
  "context.beginPath()",
  "context.fillStyle = \\"#00f\\"",
]
`;

exports[`a set of instructions that is also about a path that receives a change of state and then receives an instruction that modifies the path and then receives a change of state on the same property as the previous change of state and then draws the path and receives another change of state on the same property should have recorded three changes of state 1`] = `
Array [
  "context.beginPath()",
  "context.fillStyle = \\"#f00\\"",
  "context.moveTo(0,0)",
  "context.fillStyle = \\"#00f\\"",
  "context.fill()",
  "context.fillStyle = \\"#ff0\\"",
]
`;

exports[`a set of instructions that is also about a path that receives a change of state and then receives an instruction that modifies the path and then receives a change of state on the same property as the previous change of state should not have replaced the previous change of state 1`] = `
Array [
  "context.beginPath()",
  "context.fillStyle = \\"#f00\\"",
  "context.moveTo(0,0)",
  "context.fillStyle = \\"#00f\\"",
]
`;

exports[`a set of instructions that is also about a path that receives a change of state and then receives an instruction that modifies the path should contain an instruction to begin a path, change the state and modify the path 1`] = `
Array [
  "context.beginPath()",
  "context.fillStyle = \\"#f00\\"",
  "context.moveTo(0,0)",
]
`;

exports[`a set of instructions that is also about a path that receives a change of state should contain an instruction to begin a path and one to change the state 1`] = `
Array [
  "context.beginPath()",
  "context.fillStyle = \\"#f00\\"",
]
`;
